--- a/review.html
+++ b/review.html
@@ -18,8 +18,8 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-info">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="./images/image.jpg" height="36" />
+        <a class="navbar-brand" href="./index.html">
+          <img src="./images/paw_light.png" height="36" />
           HalieHikes</a
         >
         <button
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
+              <a class="nav-link" href="./review.html">Review</a>
             </li>
           </ul>
           <form class="d-flex">
